# protomate

./: .gitignore  .pre-commit-config.yaml  .protomate_commands.sh  .pyinq.py.swp  README.md  create.py  languages.py  protomate.py  protomate2.py  pyinq.py  pyproject.toml  readme.md  requirements.txt  script.py  setup.py
.github/workflows/: lint.yml  pythonapp.yml  pythonpublish.yml
Protomate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docs/: index.html  languages.html  script.html
docs/html/: script.html
protomate/: __init__.py  check.py  cli_prompts.py  languages.py  repo_actions.py  repo_auths.py  scraps.py  script.py  settings.py  tempCodeRunnerFile.py  test_repo_actions.py  test_repo_auth.py  utils.py
protomate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
protomate/tests/: __init__.py
src/: create.py  setup.py
src/protomate.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_repo_actions.py  test_repo_auth.py
