[tool.poetry]
name = "protomate"
version = "0.4.8"
description = "Python built CLI tool for automated github project initialization."
authors = ["Redowan Delowar"]
license = "MIT"

readme = "README.md"
repository = "https://github.com/rednafi/protomate"
documentation = "https://rednafi.github.io/protomate/"

classifiers=[
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: Implementation :: CPython",
        "Programming Language :: Python :: Implementation :: PyPy"
    ]

[tool.poetry.dependencies]
python = "^3.6"
colorama= "0.4.1"
loguru= "0.3.1"
prompt_toolkit = "2.0.9"
pyfiglet= "0.8.post1"
PyGithub= "1.43.7"
questionary= "1.1.1"
termcolor= "1.1.0"

[tool.poetry.dev-dependencies]
setuptools = "1.43.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
protomate = 'protomate.script:main'
